--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "nextn",
+  "name": "piggybank",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 9002",
-    "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
-    "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
+    "dev": "next dev --turbopack",
     "build": "NODE_ENV=production next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@genkit-ai/google-genai": "^1.20.0",
-    "@genkit-ai/next": "^1.20.0",
+    "@genkit-ai/google-genai": "^1.0.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -42,9 +39,11 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
-    "genkit": "^1.20.0",
+    "firebase-admin": "^12.1.0",
+    "genkit": "^1.0.0",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
+    "next-pwa": "^5.6.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -53,13 +52,17 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "vaul": "^0.9.1",
+    "web-push": "^3.6.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "genkit-cli": "^1.20.0",
+    "@types/web-push": "^3.6.3",
+    "eslint": "9.37.0",
+    "eslint-config-next": "15.5.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
