--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,24 +1,22 @@
 {
-  "name": "PWA Starter",
-  "short_name": "PWA Starter",
-  "description": "A simple iOS PWA starter application.",
-  "icons": [
-    {
-      "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any maskable"
-    }
-  ],
-  "theme_color": "#20B2AA",
-  "background_color": "#F0FAF9",
+  "name": "piggybank",
+  "short_name": "piggybank",
   "start_url": "/",
   "display": "standalone",
-  "orientation": "portrait"
+  "orientation": "portrait",
+  "background_color": "#000000",
+  "theme_color": "#000000",
+  "gcm_sender_id": "103953800507",
+  "icons": [
+    {
+      "src": "/icon.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
