--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Firebase service account key (NEVER commit this!)
+firebase-service-account.json
 
 # dependencies
 /node_modules
